# crates.io

./: .gitignore  package.json  pnpm-lock.yaml  publish.sh
app/: index.html  router.js  sentry.js
app/adapters/: application.js  crate-owner-invite.js  dependency.js
app/components/: breadcrumb.hbs  breadcrumb.module.css  crate-header.hbs  crate-row.module.css  follow-button.js  footer.hbs  header.hbs  rev-dep-row.module.css  text-content.module.css
app/controllers/: blog.js  dashboard.js  index.js
app/models/: version.js
app/routes/: accept-invite.js  application.js  blog-post.js  blog.js  confirm.js  crate.js
app/services/: color-scheme.js  head-data.js  session.js
app/styles/: application.module.css  blog-post.module.css  categories.module.css  category-slugs.module.css  dashboard.module.css  index.module.css  keywords.module.css
app/templates/: application.hbs  blog-post.hbs  blog.hbs  catch-all.hbs  index.hbs  search.hbs  user.hbs
app/utils/: ajax.js
config/: manifest.js
docs/: BACKEND.md  CONTRIBUTING.md
e2e/acceptance/: api-token.spec.ts  crate-dependencies.spec.ts  crate-following.spec.ts  crate.spec.ts  crates.spec.ts  dashboard.spec.ts  email-change.spec.ts  front-page.spec.ts  invites.spec.ts  login.spec.ts  read-only-mode.spec.ts  reverse-dependencies.spec.ts  search.spec.ts  token-invites.spec.ts
e2e/bugs/: 2329.spec.ts
e2e/routes/: category.spec.ts  keyword.spec.ts
public/: related-articles.json
related-articles/: .gitignore  Cargo.toml
related-articles/src/: main.rs
src/: router.rs  views.rs
tests/: index.html
(+182 files in other folders)
