[package]
name = "related-articles"
edition = "2021"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
csv = { version = "1.3" }

tokio = { version = "1.39", features = ["full"] }
sanitise-file-name = { version = "1.0" }
itertools = { version = "0.13.0" }
linkify = { version = "0.10" }
reqwest = { version = "0.12" }
scraper = { version = "0.19" }
rayon = { version = "1.10" }
sitemap-rs = { version = "0.2" }
